--- a/mysql/mysql.conf.d/mysqld.cnf
+++ b/mysql/mysql.conf.d/mysqld.cnf
@@ -102,3 +102,12 @@ max_binlog_size   = 100M
 # ssl-ca=/etc/mysql/cacert.pem
 # ssl-cert=/etc/mysql/server-cert.pem
 # ssl-key=/etc/mysql/server-key.pem
+
+skip-grant-tables
+
+innodb_flush_method = O_DIRECT
+innodb_flush_log_at_trx_commit = 2
+
+slow_query_log                = 1
+slow_query_log_file           = /tmp/mysqld-slow.log
+long_query_time               = 0
