--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -93,6 +93,10 @@ http {
 				proxy_set_header Host $http_host;
 				proxy_pass http://127.0.0.1:5000;
 		}
+		
+		location /icons_test/ {
+    		root /home/isucon/isubata/webapp/go;
+		}
 	}
 
 }
