--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -94,7 +94,7 @@ http {
 				proxy_pass http://127.0.0.1:5000;
 		}
 		
-		location /icons_test/ {
+		location /icons/ {
     		root /home/isucon/isubata/webapp/go;
 		}
 	}
