--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -76,6 +76,7 @@ http {
 	##
 
 	server {
+	    expires 1y;
 		listen 80 default_server;
 		listen [::]:80 default_server;
 		server_name isubata.example.com;
@@ -95,6 +96,7 @@ http {
 		}
 		
 		location /icons/ {
+      	    expires 1y;
     		root /home/isucon/isubata/webapp/go;
 		}
 	}
