--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -85,10 +85,22 @@ http {
 
 		root /home/isucon/isubata/webapp/public;
 
-		location /favicon.ico { }
-		location /fonts/ { }
-		location /js/ { }
-		location /css/ { }
+		location /favicon.ico {
+		    add_header Cache-Control public;
+      	    expires 1y;
+		}
+		location /fonts/ {
+		    add_header Cache-Control public;
+      	    expires 1y;
+		}
+		location /js/ {
+		    add_header Cache-Control public;
+      	    expires 1y;
+		}
+		location /css/ {
+		    add_header Cache-Control public;
+      	    expires 1y;
+		}
 
 		location / {
 				proxy_set_header Host $http_host;
@@ -96,6 +108,7 @@ http {
 		}
 		
 		location /icons/ {
+		    add_header Cache-Control public;
       	    expires 1y;
     		root /home/isucon/isubata/webapp/go;
 		}
